# bizcharts

./: .gitignore  CLAUDE.md  claude.md  project-considerations.md
.serena/: project.yml
config/: lexicon.json  settings.toml
docs/: automated-training.md  labeling-guide.md  project-considerations.md  self-training.md  sentiment-strategy.md  training-flow.md  updated-training-method.md
docs/plans/: implementation-roadmap.md  self-training-implementation.md
python-ml/: README.md  pyproject.toml
python-ml/src/: __init__.py  aggregator.py  dashboard.py  image_analyzer.py  label_analysis.py  labeler.py  price_provider.py  text_analyzer.py
python-ml/src/active_learning/: __init__.py  acquisition.py  labeler_integration.py
python-ml/src/continual/: __init__.py  drift_detector.py  replay_buffer.py
python-ml/src/fusion/: __init__.py  multimodal_pipeline.py  sarcasm_detector.py
python-ml/src/inference/: __init__.py  onnx_exporter.py  pipeline.py
python-ml/src/training/: __init__.py  auto_labeler.py  data_loader.py  prepare_training_data.py  pseudo_labeler.py  setfit_trainer.py
python-ml/src/training/runpod/: __init__.py  setup.sh  train_cryptobert.py  train_llava.py  train_qwen.py  train_setfit.py
rust-scraper/: Cargo.toml
rust-scraper/backups/: labels_with_text_20251219_205810.csv  training_labels_20251219_205810.sql  training_labels_backup_20251219_191841.sql
rust-scraper/src/: config.rs  db.rs  extractor.rs  lib.rs  main.rs  maintenance.rs  scraper.rs  warosu.rs
