[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bizcharts-ml"
version = "0.1.0"
description = "ML sentiment analysis for 4chan /biz/ board"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "BizCharts" }
]

dependencies = [
    # Data processing
    "polars>=1.0.0",
    "duckdb>=1.0.0",

    # Sentiment analysis
    "vaderSentiment>=3.3.2",

    # Claude SDK
    "anthropic>=0.40.0",

    # Image analysis
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "ultralytics>=8.0.0",  # YOLOv8
    "paddleocr>=2.7.0",
    "paddlepaddle>=2.5.0",
    "Pillow>=10.0.0",

    # ML Training - SetFit & Few-shot
    "setfit>=1.0.0",
    "sentence-transformers>=2.2.0",
    "datasets>=2.14.0",

    # LoRA & Efficient Fine-tuning
    "peft>=0.6.0",
    "bitsandbytes>=0.41.0",
    "accelerate>=0.24.0",

    # Inference optimization
    "optimum[onnxruntime]>=1.13.0",

    # Active learning & drift detection
    "river>=0.21.0",
    "scikit-learn>=1.3.0",

    # Experiment tracking
    "mlflow>=2.8.0",

    # HTTP client
    "httpx>=0.27.0",

    # Configuration
    "tomli>=2.0.0",

    # Visualization & Dashboard
    "plotly>=5.20.0",
    "streamlit>=1.35.0",

    # Utilities
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
biz-analyze = "src.aggregator:main"
biz-dashboard = "src.dashboard:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
